--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,3 +1,6 @@
+<head>
+  <script src="https://code.iconify.design/1/1.0.2/iconify.min.js"></script>
+</head>
 <div class="contact-container container-block">
   <ul class="list-unstyled contact-list">
 
@@ -57,6 +60,7 @@
 
     {% if sidebar.codewars %}
     <li class="codewars"><i class="fas fa-code"></i>
+      <span class="iconify" data-icon="simple-icons:codewars" data-inline="false"></span>
       <a href="https://www.codewars.com/users/{{ sidebar.codewars }}/completed_solutions" target="_blank">{{ sidebar.codewars }}</a>
     </li>
     {% endif %}
