--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -63,7 +63,7 @@ vertical-align: -0.125em;
     {% endif %}
 
     {% if sidebar.codewars %}
-    <li class="codewars"><span class="iconify" data-icon="simple-icons:codewars" data-inline="false"></span><!--<i class="fas fa-code">--></i>
+    <li class="codewars"><!--<span class="iconify" data-icon="simple-icons:codewars" data-inline="false"></span>--><i class="fas fa-code"></i>
       
       <a href="https://www.codewars.com/users/{{ sidebar.codewars }}/completed_solutions" target="_blank">{{ sidebar.codewars }}</a>
     </li>
